<resources>
    <string name="app_name">Stock Management System</string>
    <string name="textview">Enter Passcode</string>
    <string name="name">Enter your Name</string>
    <string name="button">Lets Start</string>
    <string name="user">New User?</string>
    <string name="register"><u>Register now</u></string>
    <string name="confirm_passcode">Confirm Passcode</string>
    <string name="menu">Choose from below options</string>
    <string name="add">Add new Stocks</string>
    <string name="delete">Delete items from Stock</string>
    <string name="search">Search item from stock</string>
</resources>